--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ git+https://github.com/MKN-BOTZ/pyrogram
 aiofiles==22.1.0     
 aiohttp==3.8.3
 tgcrypto==1.2.5
-requests==2.28.2
+requests
 bs4==0.0.1
 
 #---database---#
@@ -23,9 +23,6 @@ yt-dlp==2023.2.17
 
 #---imdb---#
 git+https://github.com/cinemagoer/cinemagoer
-
-#---BARD AI---#
-git+https://github.com/dsdanielpark/Bard-API.git
 
 #---others----#
 opencv-python-headless==4.7.0.68
